--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "npmtest-shared2": "git+ssh://git@github.com:marneborn/npmtest-shared2.git#1.0.0"
+    "npmtest-shared2": "git+ssh://git@github.com:marneborn/npmtest-shared2.git#ver1"
   }
 }
